--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
-    <title>JS Modular Pattern</title>
+    <title>Javascript Modular Pattern</title>
     <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?3.10.0/build/cssreset/cssreset-min.css&3.10.0/build/cssfonts/cssfonts-min.css&3.10.0/build/cssgrids-responsive/cssgrids-responsive-min.css">
     <link rel="stylesheet" type="text/css" href="static/main.css">
 </head>
